<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fav.movie.my_favorite_movies.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView" />

    <Button
        android:text="@string/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/buttonEdit"
        android:layout_below="@+id/buttonAdd"
        android:layout_alignRight="@+id/buttonAdd"
        android:layout_alignEnd="@+id/buttonAdd"
        android:layout_alignLeft="@+id/buttonAdd"
        android:layout_alignStart="@+id/buttonAdd" />

    <Button
        android:text="@string/btn_show_rating"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/buttonShowRating"
        android:layout_below="@+id/buttonShowYear"
        android:layout_alignLeft="@+id/buttonShowYear"
        android:layout_alignStart="@+id/buttonShowYear"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/buttonAdd"
        android:text="@string/btn_add"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/btn_delete"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/buttonDel"
        android:layout_below="@+id/buttonEdit"
        android:layout_alignLeft="@+id/buttonEdit"
        android:layout_alignStart="@+id/buttonEdit" />

    <Button
        android:text="@string/btn_show_year"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/buttonShowYear"
        android:layout_below="@+id/buttonDel"
        android:layout_alignLeft="@+id/buttonDel"
        android:layout_alignStart="@+id/buttonDel" />

    <Spinner android:text="Pick a movie"
        android:id="@+id/editMovieSpinner"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAdd"
        android:visibility="gone"
        android:layout_alignRight="@+id/buttonAdd"
        android:layout_alignEnd="@+id/buttonAdd"
        android:layout_alignLeft="@+id/buttonAdd"
        android:layout_alignStart="@+id/buttonAdd"
        android:textColor="#efefef"
        android:background="#ffffff"/>
</RelativeLayout>
